--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <li><a href="">지속가능경영</a></li>
         </ul>
         <div class="util">
-          <button type="button" class="btn-lan"><i class="hidden">언어선택</i></button>
+          <button type="button" class="btn-lang"><i class="hidden">언어선택</i></button>
           <button type="button" class="btn-menu"><i class="hidden">메뉴</i></button>
 
         </div>
