--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
               <option value="">(주)화승케이컬</option>
             </select>
           </div>
-          <ul class="policy">
+          <ul class="policy-list">
             <li><a href="#">개인정보처리방침</a></li>
             <li><a href="#">이용약관</a></li>
           </ul>
