--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <h1 class="logo"><a href="#"><i class="hidden">화승그룹</i></a>
         </h1>
         <ul class="gnb">
-          <li><a href="#">화승</a></li>
-          <li><a href="#">사업분야</a></li>
-          <li><a href="#">PR ROOM</a></li>
-          <li><a href="#">지속가능경영</a></li>
+          <li><a href="#"><b>화승</b></a></li>
+          <li><a href="#"><b>사업분야</b></a></li>
+          <li><a href="#"><b>PR ROOM</b></a></li>
+          <li><a href="#"><b>지속가능경영</b></a></li>
         </ul>
         <div class="util">
           <button type="button" class="btn-lang"><i class="hidden">언어선택</i></button>
