lang 추가 및 최종 스크립트 완성

--- a/index.html
+++ b/index.html
@@ -31,28 +31,34 @@
 
       <li>
         <strong>사업분야</strong>
-      <li><a href="#">자동차 부품</a></li>
-      <li><a href="#">종합무역</a></li>
-      <li><a href="#">소재</a></li>
-      <li><a href="#">화학</a></li>
-      <li><a href="#">스포츠패션ODM</a></li>
+        <ul class="m-gnb-sub">
+          <li><a href="#">자동차 부품</a></li>
+          <li><a href="#">종합무역</a></li>
+          <li><a href="#">소재</a></li>
+          <li><a href="#">화학</a></li>
+          <li><a href="#">스포츠패션ODM</a></li>
+        </ul>
+
       </li>
 
       <li>
         <strong>PR ROOM</strong>
-      <li><a href="#">보도자료</a></li>
-      <li><a href="#">홍보영상</a></li>
-      <li><a href="#">사보</a></li>
+        <ul class="m-gnb-sub">
+          <li><a href="#">보도자료</a></li>
+          <li><a href="#">홍보영상</a></li>
+          <li><a href="#">사보</a></li>
       </li>
+    </ul>
 
-      <li>
-        <strong>지속가능경영</strong>
-      <li><a href="#">나눔경영</a></li>
-      <li><a href="#">환경경영</a></li>
-      <li><a href="#">사회경영</a></li>
-      <li><a href="#">투명경영</a></li>
-
-      </li>
+    <li>
+      <strong>지속가능경영</strong>
+      <ul class="m-gnb-sub">
+        <li><a href="#">나눔경영</a></li>
+        <li><a href="#">환경경영</a></li>
+        <li><a href="#">사회경영</a></li>
+        <li><a href="#">투명경영</a></li>
+      </ul>
+    </li>
     </ul>
 
   </div>
@@ -73,6 +79,10 @@
 
         <div class="util">
           <button type="button" class="btn-lang"><i class="hidden">언어선택</i></button>
+          <!-- 언어 선택 창 -->
+          <div class="lang-select">
+            <a href="#">ENGLISH</a>
+          </div>
           <button type="button" class="btn-menu"><i class="hidden">메뉴</i></button>
           <button type="button" class="btn-m-menu"><i class="hidden">메뉴</i></button>
 
@@ -143,7 +153,7 @@
       </div>
       <div class="inner">
         <div class="visual-con">
-          <h2>70년을 넘어,<br> 100년 기업을 향한<br> 화승의 도전 </h2>
+          <h2>70년을 넘어,<br> 100년 기업을 향한<br> 화승의 도<b>전</b> </h2>
           <a href="#">Introduction</a>
         </div>
       </div>
