서클 프로세스 추가 및 최종완성

--- a/index.html
+++ b/index.html
@@ -295,6 +295,15 @@
               <div class="progress">
                 <div class="progress-bar"></div>
               </div>
+
+              <!--    원으로 표시되는 진행 
+              <div class="autoplay-progress">
+                <svg viewBox="0 0 200 200">
+                  <circle cx="100" cy="100" r="98"></circle>
+                </svg>
+                <span></span>
+              </div> -->
+
               <div class="pagination-wrap">
                 <div class="swiper-pagination"></div>
                 <div class="controls">
